add employer detail api
